add exit interview data

--- a/index.html
+++ b/index.html
@@ -2865,6 +2865,7 @@
     "exit_id" : int,
     "exit_date" : string,
     "disable_account" : bool,
+    "exit_interview" : string,
     "description" : string
 }
                             </pre>
@@ -2903,6 +2904,7 @@
             "employee_id": int,
             "exit_id": int,
             "disable_account": bool,
+            "exit_interview": string,
             "description": string,
             "exit_date": string,
             "created_at": time
@@ -2935,6 +2937,7 @@
             "employee_id": int,
             "exit_id": int,
             "disable_account": bool,
+            "exit_interview": string,
             "description": string,
             "exit_date": string,
             "created_at": time
