--- a/index.html
+++ b/index.html
@@ -4528,8 +4528,8 @@
 {
     "employee_id" : int,
     "attendance_date" : string,
-    "in_time" : string,
-    "out_time" : string
+    "in_time" : string (Format 10:00),
+    "out_time" : string (Format 11:00)
 }
 
                             </pre>
@@ -4546,6 +4546,7 @@
         "attendance_date": string,
         "in_time": string,
         "out_time": string,
+        "total_work": string,
         "created_at": time
     },
     "error": false,
@@ -4577,6 +4578,7 @@
             "attendance_date": string,
             "in_time": string,
             "out_time": string,
+            "total_work": string,
             "created_at": time
         },
         {
@@ -4586,6 +4588,7 @@
             "attendance_date": string,
             "in_time": string,
             "out_time": string,
+            "total_work": string,
             "created_at": time
         }
     ],
@@ -4617,6 +4620,7 @@
         "attendance_date": string,
         "in_time": string,
         "out_time": string,
+        "total_work": string,
         "created_at": time
     },
     "error": false,
@@ -4656,6 +4660,7 @@
         "attendance_date": string,
         "in_time": string,
         "out_time": string,
+        "total_work": string,
         "created_at": time
     },
     "error": false,
