--- a/index.html
+++ b/index.html
@@ -116,11 +116,17 @@
                 <li class="nav-item"><a class="nav-link" href="#ViewProjectsByID">View List Projects By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#EditProjectsByID">Edit List Projects By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DeleteProjectsByID">Delete List Projects By ID</a></li>
+
                 <li class="nav-item"><a class="nav-link" href="#CreateTasks">Create Tasks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewTasks">View List Tasks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewTasksByID">View List Tasks By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#EditTasksByID">Edit List Tasks By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DeleteTasksByID">Delete List Tasks By ID</a></li>
+
+                <li class="nav-item"><a class="nav-link" href="#CreateNotesForTask">Create Notes For Tasks</a></li>
+                <li class="nav-item"><a class="nav-link" href="#DeleteNotesForTaskByID">Delete Notes For Tasks By ID</a></li>
+
+
                 <li class="nav-item"><a class="nav-link" href="#CreateCases">Create Cases</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewCases">View List Cases</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewCasesByID">View List Cases By ID</a></li>
@@ -1872,7 +1878,8 @@
         "project_name": string,
         "summary": string,
         "description": string,
-        "status" : string
+        "status" : string,
+        "notes" : [] of string
         "created_at": time,
         "updated_at": time
     }
@@ -1908,7 +1915,8 @@
             "project_name": string,
             "summary": string,
             "description": string,
-            "status" : string
+            "status" : string,
+            "notes" : [] of string,
             "created_at": time,
             "updated_at": time
         },
@@ -1922,7 +1930,8 @@
             "project_name": string,
             "summary": string,
             "description": string,
-            "status" : string
+            "status" : string,
+            "notes" : [] of string,
             "created_at": time,
             "updated_at": time
         }
@@ -1958,7 +1967,8 @@
         "project_name": string,
         "summary": string,
         "description": string,
-        "status" : string
+        "status" : string,
+        "notes" : [] of string,
         "created_at": time,
         "updated_at": time
     }
@@ -1987,8 +1997,6 @@
     "description" : string,
     "status" : string,
     "progress_bar" : int,
-    "notes" : string
-
 }
                             </pre>
                     <p><strong>Note</strong></p>
@@ -2011,7 +2019,7 @@
         "description": string,
         "status" : string,
         "progress_bar" : int,
-        "notes" : string,
+        "notes" : [] array of string,
         "created_at": time,
         "updated_at": time
     }
@@ -2036,6 +2044,62 @@
     "code": 200,
     "error": false,
     "message": "Task deleted successfully"
+}
+                            </pre>
+                </div>
+            </div>
+
+            <div id="CreateNotesForTask" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Create Notes For Tasks</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/tasks/notes</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>POST</code></p>
+                    <p><strong>Request Body - Raw Json</strong></p>
+                    <pre>
+{
+    "task_id" : int,
+    "note_text" : string
+}
+
+                            </pre>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 201,
+    "error": false,
+    "message": "Note created successfully",
+    "note": {
+        "id": int,
+        "task_id": int,
+        "note_text": string,
+        "fullname": string (Nama pembuat post),
+        "created_at": time
+    }
+}
+                        </pre>
+                </div>
+            </div>
+
+
+            <div id="DeleteNotesForTaskByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Delete Notes For Tasks By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/tasks/notes/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>DELETE</code></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Note deleted successfully"
 }
                             </pre>
                 </div>
