fix project status bar

--- a/index.html
+++ b/index.html
@@ -1673,7 +1673,8 @@
         "department_id": int,
         "department_name": string,
         "description": string,
-        "status" : string
+        "status" : string,
+        "project_bar": int,
         "created_at": time,
         "updated_at": time
     }
@@ -1712,7 +1713,8 @@
             "department_id": int,
             "department_name": string,
             "description": string,
-            "status" : string
+            "status" : string,
+            "project_bar": int,
             "created_at": time,
             "updated_at": time
         },
@@ -1729,7 +1731,8 @@
             "department_id": int,
             "department_name": string,
             "description": string,
-            "status" : string
+            "status" : string,
+            "project_bar": int,
             "created_at": time,
             "updated_at": time
         },
@@ -1768,7 +1771,8 @@
         "department_id": int,
         "department_name": string,
         "description": string,
-        "status" : string
+        "status" : string,
+        "project_bar": int,
         "created_at": time,
         "updated_at": time
     }
@@ -1796,7 +1800,8 @@
     "end_date" : string (yyyy-mm-dd),
     "summary" : string,
     "department_id" : int,
-    "description" : string
+    "description" : string,
+    "project_bar": int,
     "status" : string
 }
                             </pre>
@@ -1818,7 +1823,9 @@
         "start_date": string,
         "end_date": string,
         "created_at": time,
-        "UpdatedAt": time
+        "UpdatedAt": time,
+        "status" : string,
+        "project_bar": int
     }
 }
                             </pre>
