bugs fix and add email notification

--- a/index.html
+++ b/index.html
@@ -6926,6 +6926,7 @@
 {
 	"title": string,
 	"employee_id": int,
+    "appraisal_date" : string (mm-yyyy),
 	"bdd_selling_skill": int,
 	"bdd_handling_objection": int,
 	"bdd_negotiation_skill": int,
